<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diary_label_whatrudoing"
        android:textAppearance="?android:attr/textAppearanceLarge" />
	<!-- 
    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView_doing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        />
     -->
     
    <EditText
        android:id="@+id/editText_diary_doing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/diary_hint_doing" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/diary_label_select_from_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diary_label_select_one"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spinner_diary_doing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_label_starttime"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button_diary_start_now"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_button_start_now" />

        <Button
            android:id="@+id/button_diary_choose_start_time"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_start_time" />

        <Button
            android:id="@+id/button_diary_choose_start_date"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_button_choose_date" />

    </LinearLayout>
    
    <TextView
        android:id="@+id/text_diary_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   	 
    <!-- 
	<TimePicker android:id="@+id/timePickerStart"  
	    android:layout_width="wrap_content"  
	    android:layout_height="wrap_content" />
	 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_label_endtime"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button_diary_end_now"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_button_end_now" />

        <Button
            android:id="@+id/button_diary_choose_end_time"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_end_time" />

        <Button
            android:id="@+id/button_diary_choose_end_date"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_button_choose_date" />

    </LinearLayout>
	
    <TextView
        android:id="@+id/text_diary_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />
     

    <!-- 
    <TimePicker
        android:id="@+id/timePickerEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_diary_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_button_save"
            />

        <Button
            android:id="@+id/button_diary_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_button_cancel"
            />

        <Button
            android:id="@+id/button_diary_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_button_quit" />

    </LinearLayout>

    <TextView
        android:id="@+id/label_diary_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>